fixed paragraphs spacing

--- a/_sass/20_app.scss
+++ b/_sass/20_app.scss
@@ -3,8 +3,9 @@ body{
   font-size: 16px;
 	letter-spacing:+0.5px;
 }
-[wrapper] p{
-  text-indent: 2rem;
+[wrapper] p {
+  text-indent: 3rem;
+  margin: 0.6rem 0;
 }
 [wrapper]{
   max-width: 70rem;
